# nimbus

./: .bazelrc  .gitattributes  .gitignore  AUTHORS  BUILD.bazel  CONTRIBUTORS  Cargo.toml  LICENSE  MODULE.bazel
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
rfcs/: 0001-Distributed-Root-CA-Bootstrap.md
