# Copyright (c) 2026 The Nimbus Authors. All rights reserved.
#
# The use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

[package]
name = "nimbus"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
